Upgrade to Gatling 3.3.1